Added emoji suggestion api
