# libs/emoji-tracker-lib/src/api/openapi/swagger.json
@@ -89,6 +89,15 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"SuccessResponse_string-or-undefined_": {
+				"properties": {
+					"response": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -465,6 +474,54 @@
 					{
 						"in": "query",
 						"name": "filter",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/users/{userId}/mood/suggestion": {
+			"get": {
+				"operationId": "HandlerFunc",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SuccessResponse_string-or-undefined_"
+								}
+							}
+						}
+					}
+				},
+				"summary": "give user emoji suggestion based on there notes",
+				"tags": [
+					"Suggestions"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "X-Access-Token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "text",
 						"required": true,
 						"schema": {
 							"type": "string"
